--- a/Week-4/flexbox.html
+++ b/Week-4/flexbox.html
@@ -14,6 +14,10 @@
     <title>Document</title>
   </head>
   <body>
+    <section class="soltaraf">
+        <div class="bal1"></div>
+        <div class="bal2"></div>
+    </section>
     <main id="ana">
       <section class="ilk">
         <div id="tepe1"><i class="fas fa-chevron-left"></i></div>
@@ -70,5 +74,9 @@
         <i class="fas fa-user-alt"></i>
       </section>
     </main>
+    <section class="sagtaraf">
+        <div class="bal3"></div>
+        <div class="bal4"></div>
+    </section>
   </body>
 </html>
