iconlar yuvarlak içine alınmadan

--- a/Week-4/flexbox.html
+++ b/Week-4/flexbox.html
@@ -14,10 +14,11 @@
     <title>Document</title>
   </head>
   <body>
-    <section class="soltaraf">
+    <section class="sagsoltaraf">
         <div class="bal1"></div>
         <div class="bal2"></div>
     </section>
+
     <main id="ana">
       <section class="ilk">
         <div id="tepe1"><i class="fas fa-chevron-left"></i></div>
@@ -29,6 +30,7 @@
           <img src="./profilfotoGL.jpeg" alt="" />
           <h2>Gaurav K.</h2>
           <h3>Viseul Designer</h3>
+          
           <div class="icons">
             <ul class="icons">
               <li>
@@ -55,26 +57,29 @@
           </div>
         </div>
         <h5>ACCOUNT SETTİNGS</h5>
+
         <div class="cokludiv">
           <div>
-            <i class="far fa-envelope"></i>
-            <p>Update Email Adress</p>
+             <i class="far fa-envelope"></i>
+           <p>Update Email Adress</p>
             <i class="fas fa-chevron-right"></i>
           </div>
           <div><i class="fas fa-key"></i>
-        <p>Resert Password</p><i class="fas fa-chevron-right"></i></div>
+           <p>Resert Password</p><i class="fas fa-chevron-right"></i></div>
           <div><i class="fas fa-folder"></i><p>Update my details</p><i class="fas fa-chevron-right"></i></div>
           <div><i class="fas fa-sign-out-alt"></i><p>Log Out</p><i class="fas fa-chevron-right"></i></div>
         </div>
         <h4>PRIVECY SETTİNGS</h4>
-      <section class="footer">
-        <i class="far fa-clone"></i>
-        <i class="far fa-comments"></i>
-        <i class="fas fa-search"></i>
-        <i class="fas fa-user-alt"></i>
+        <section class="footer">
+          <i class="far fa-clone"></i>
+          <i class="far fa-comments"></i>
+          <i class="fas fa-search"></i>
+          <i class="fas fa-user-alt"></i>
+        </section>
       </section>
+      
     </main>
-    <section class="sagtaraf">
+    <section class="sagsoltaraf">
         <div class="bal3"></div>
         <div class="bal4"></div>
     </section>
