--- a/Week-4/flexbox.html
+++ b/Week-4/flexbox.html
@@ -20,12 +20,12 @@
         <div class="bal2"></div>
     </section>
 
-    <!--Profil kısmı bu bölümdedir. -->
-
+     <!--Profil kısmı bu bölümdedir. -->
     <main id="ana">
       <section class="ilk">
         <div id="tepe1"><i class="fas fa-chevron-left"></i></div>
         <div id="tepe2"><i class="fas fa-ellipsis-h"></i></div>
+      </section>
        </section>
 
       <section class="iki">
@@ -33,9 +33,11 @@
           <div class="fotoo">
             <i class="fas fa-camera"></i>
           </div>
+
           <h2>Gaurav K.</h2>
           <h3>Viseul Designer</h3>
-          <div class="icons">
+
+        <div class="icons">
             <ul class="icons">
               <li>
                 <a href="https://twitter.com/twitter?lang=tr" target="blank"
@@ -61,18 +63,17 @@
           </div>
         </div>
         <h5>ACCOUNT SETTİNGS</h5>
-
         <div class="cokludiv">
           <div>
-            <i class="far fa-envelope"></i>
-          <p>Update Email Adress</p>
-           <i class="fas fa-chevron-right"></i>
-         </div>
-         <div><i class="fas fa-key"></i>
-          <p>Resert Password</p><i class="fas fa-chevron-right"></i></div>
-         <div><i class="fas fa-folder"></i><p>Update my details</p><i class="fas fa-chevron-right"></i></div>
-         <div><i class="fas fa-sign-out-alt"></i><p>Log Out</p><i class="fas fa-chevron-right"></i></div>
-       </div>
+             <i class="far fa-envelope"></i>
+           <p>Update Email Adress</p>
+            <i class="fas fa-chevron-right"></i>
+          </div>
+          <div><i class="fas fa-key"></i>
+           <p>Resert Password</p><i class="fas fa-chevron-right"></i></div>
+          <div><i class="fas fa-folder"></i><p>Update my details</p><i class="fas fa-chevron-right"></i></div>
+          <div><i class="fas fa-sign-out-alt"></i><p>Log Out</p><i class="fas fa-chevron-right"></i></div>
+        </div>
         <h4>PRIVECY SETTİNGS</h4>
         <section class="footer">
           <i class="far fa-clone"></i>
@@ -82,7 +83,6 @@
         </section>
       </section>
     </main>
-
     <!--Sag taraf balonlar flex ile dik yerleştirilmiştir -->
     <section class="sagsoltaraf">
         <div class="bal3"></div>
