footer hasbeen added but it should been designed.

--- a/Week-5/facebook.html
+++ b/Week-5/facebook.html
@@ -38,9 +38,20 @@
     </main>
 
     <footer id="footer">
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="footertop">
+        Deutsch Francasic(France) English(US) Italiano Portagues(Portugal) Shqip
+        Espanol Türkçe <span>agdjka</span><span>hjdjkhadh</span>
+      </div>
+      <div class="footermid">
+        <p>
+          Registieren Anmelden Messenger Facebook Life Orte Spiele Marketplace
+          Facebook Pay Jobs Oculus Portal Instagram Lokales Spendenaktionen
+          Services Wahl-Informationszentrum Unternehmen Unternehmen Info
+          Werbenanzeige erstellen Seite erstellen Entwickler Karriere
+          Privatsphare Cookies Datenschutzinfo Nutzungsbedingungen Hilfe
+        </p>
+      </div>
+      <div class="footerbottom">Facebook 2021</div>
     </footer>
   </body>
 </html>
