footer has been designed

--- a/Week-5/facebook.html
+++ b/Week-5/facebook.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./facebook.css" />
+
     <title>Facebook</title>
   </head>
   <body>
@@ -39,8 +40,11 @@
 
     <footer id="footer">
       <div class="footertop">
-        Deutsch Francasic(France) English(US) Italiano Portagues(Portugal) Shqip
-        Espanol Türkçe <span>agdjka</span><span>hjdjkhadh</span>
+        <p>
+          Deutsch Francasic(France) English(US) Italiano Portagues(Portugal)
+          Shqip Espanol Türkçe 而自由；在尊 لا تمطر غيرحلام
+          <span>+</span>
+        </p>
       </div>
       <div class="footermid">
         <p>
@@ -51,7 +55,7 @@
           Privatsphare Cookies Datenschutzinfo Nutzungsbedingungen Hilfe
         </p>
       </div>
-      <div class="footerbottom">Facebook 2021</div>
+      <div class="footerbottom">Facebook &copy; 2021</div>
     </footer>
   </body>
 </html>
