footer has been designed

--- a/Week-5/facebook.html
+++ b/Week-5/facebook.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <main id="main-container">
+      <!--Sayfanın üst kısmı mainin altında ikiye bölünmüştür.-->
       <section id="leftside">
         <h1>facebook</h1>
         <p>
@@ -17,6 +18,8 @@
           ,Videos und vieles mehr mit ihnen
         </p>
       </section>
+
+      <!--Sayfanın sağ üst kısmıdır.Bu kısımda üst orta ve alt kısım olarak 3 e bölünmüştür..-->
       <section id="rightside">
         <div class="righttop">
           <input type="email" value="E-mail Adresse und Telefon Nummer" />
@@ -27,7 +30,6 @@
             <input type="button" value="Neues Konto erstellen" />
           </div>
         </div>
-
         <div class="altparagraf">
           <p>
             <span class="span">Erste eine Seite</span> für einen Star,eine Band
@@ -38,6 +40,7 @@
       </section>
     </main>
 
+    <!--Sayfanın alt kısmıdır.Bu kısımda dizaynı daha rahat yapılabilmesi için 3 e bölünmüştür. .-->
     <footer id="footer">
       <div class="footertop">
         <p>
