footer has been designed

--- a/Week-5/facebook.html
+++ b/Week-5/facebook.html
@@ -22,8 +22,8 @@
       <!--Sayfanın sağ üst kısmıdır.Bu kısımda üst orta ve alt kısım olarak 3 e bölünmüştür..-->
       <section id="rightside">
         <div class="righttop">
-          <input type="email" value="E-mail Adresse und Telefon Nummer" />
-          <input type="passwort" value="Passwort" />
+          <input type="email" placeholder="E-mail Adresse und Telefon Nummer" />
+          <input type="passwort" placeholder="Passwort" />
           <input type="button" value="Anmelden" />
           <a href="">Passwort vergessen?</a>
           <div class="button">
