footer has been added

--- a/Week-6/create-template.html
+++ b/Week-6/create-template.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./create-template.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
     <title>Create-Template</title>
   </head>
   <body>
@@ -73,5 +74,19 @@
         </div>
       </section>
     </main>
+
+    <footer>
+        <section class="footer1">
+            <div></div>
+        </section>
+        <section class="footer2">
+            <i class="fab fa-facebook-square "></i>
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+        </section>
+        
+    </footer>
   </body>
 </html>
