triangles has been fixed

--- a/Week-6/create-template.html
+++ b/Week-6/create-template.html
@@ -35,14 +35,20 @@
         <div class="handy-mid"></div>
         <div class="handy-bottom"></div>
       </section>
+
       <section class="main-mid">
         <div class="main-mid-top">
           <div class="main-mid-circle"></div>
         </div>
         <div class="main-mid-midd">
           <div class="main-midd-triangle1"></div>
-          <div class="main-midd-triangle1"></div>
+          <div class="main-midd-triangle2"></div>
         </div>
+        <section class="circles">
+        <div></div>
+        <div></div>
+        <div></div>
+       </section>
       </section>
       <section class="main-right">
         
@@ -69,8 +75,9 @@
           </div>
           <div class="main-mid-midd">
             <div class="main-midd-triangle1"></div>
-            <div class="main-midd-triangle1"></div>
+            <div class="main-midd-triangle2"></div>
           </div>
+          
         </div>
       </section>
     </main>
